nether mob rebalance
decrease camo spider hp
decrease festive creeper hp
increase dark zombie hp
decrease bloody zombie hp

- mobs no longer wear nether gear outside of the nether
- bloody zombie and dark zombies can now wear nether gear, also now leap and have a chance to apply hunger on attack
- all zombie types can spawn with items on their offhand
- skeleton types can no longer use gear other than a bow (except the warrior)
- zombie types can no longer spawn on zombie/skelly horses
- pigmen now dont automatically aggro. they only aggro if you get close or bother them
- decrease blazing juggernaugt follow range

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -53,12 +53,14 @@ attributes {
         creeper;generic.movementSpeed;1;0.5
         slime;generic.movementSpeed;1;0.5
         magma_cube;generic.movementSpeed;1;0.5
-        nethercraft:dark_zombie;generic.maxHealth;0;-40;/;0
-        nethercraft:bloody_zombie;generic.maxHealth;0;-20;/;0
-        primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10
-        primitivemobs:flame_spewer;generic.maxHealth;0;-15
-        nethercraft:camouflage_spider;generic.maxHealth;0;-20
+        nethercraft:dark_zombie;generic.maxHealth;0;-35;/;0
+        nethercraft:bloody_zombie;generic.maxHealth;0;-25;/;0
+        primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10;/;0
+        primitivemobs:flame_spewer;generic.maxHealth;0;-15;/;0
+        nethercraft:camouflage_spider;generic.maxHealth;0;-25;/;0
+        primitivemobs:festive_creeper;generic.maxHealth;0;-10;/;0
         primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
+        primitivemobs:blazing_juggernaut;generic.followRange;0;-20
 
         grue:entitygrue;generic.followRange;0;50
      >
@@ -564,58 +566,35 @@ skeletonbossequipment {
 
     # Enchantments which can be applied to armor items [default: [protection;4], [feather_falling;3], [respiration;3], [depth_strider;3], [thorns;2], [projectile_protection;2], [fire_protection;2], [blast_protection;2]]
     S:skeletonbossEquipmentArmorEnchants <
-        protection;4
-        feather_falling;3
-        respiration;3
-        depth_strider;3
-        thorns;2
-        projectile_protection;2
-        fire_protection;2
-        blast_protection;2
      >
 
     # Boots which can be worn by a skeleton boss in their boots slot [default: [diamond_boots;1]]
     S:skeletonbossEquipmentBoots <
-        diamond_boots;1
      >
 
     # Chestplates which can be worn by a skeleton boss in their chestplate slot [default: [diamond_chestplate;1]]
     S:skeletonbossEquipmentChestplate <
-        diamond_chestplate;1
      >
 
     # Helmets which can be worn by a skeleton boss in their helmet slot [default: [diamond_helmet;1]]
     S:skeletonbossEquipmentHelmet <
-        diamond_helmet;1
      >
 
     # Leggings which can be worn by a skeleton boss in their leggings slot [default: [diamond_leggings;1]]
     S:skeletonbossEquipmentLeggings <
-        diamond_leggings;1
      >
 
     # Items which can be wielded by a skeleton boss in their mainhand [default: [diamond_sword;3], [diamond_axe;1]]
     S:skeletonbossEquipmentMainhand <
-        diamond_sword;3
-        diamond_axe;1
      >
 
     # Items which can be wielded by a skeleton boss in their offhand [default: [shield;2], [diamond_sword;1], [diamond_axe;1]]
     S:skeletonbossEquipmentOffhand <
-        shield;2
-        diamond_sword;1
-        diamond_axe;1
+
      >
 
     # Enchantments which can be applied to mainhand and offhand items [default: [sharpness;4], [knockback;2], [smite;2], [bane_of_arthropods;2], [looting;1], [sweeping;1], [fire_aspect;5;-1]]
     S:skeletonbossEquipmentWeaponEnchants <
-        sharpness;4
-        knockback;2
-        smite;2
-        bane_of_arthropods;2
-        looting;1
-        sweeping;1
-        fire_aspect;5;-1
      >
 }
 
@@ -653,46 +632,22 @@ skeletonequipment {
 
     # Enchantments which can be applied to armor items [default: [protection;4], [feather_falling;3], [respiration;3], [depth_strider;3], [thorns;2], [projectile_protection;2], [fire_protection;2], [blast_protection;2]]
     S:skeletonEquipmentArmorEnchants <
-        protection;4
-        feather_falling;3
-        respiration;3
-        depth_strider;3
-        thorns;2
-        projectile_protection;2
-        fire_protection;2
-        blast_protection;2
      >
 
     # Boots which can be worn by a skeleton in their boots slot [default: [leather_boots;3;0], [chainmail_boots;2], [golden_boots;1], [iron_boots;4;-1]]
     S:skeletonEquipmentBoots <
-        leather_boots;3;0
-        chainmail_boots;2
-        golden_boots;1
-        iron_boots;4;-1
      >
 
     # Chestplates which can be worn by a skeleton in their chestplate slot [default: [leather_chestplate;3;0], [chainmail_chestplate;2], [golden_chestplate;1], [iron_chestplate;4;-1]]
     S:skeletonEquipmentChestplate <
-        leather_chestplate;3;0
-        chainmail_chestplate;2
-        golden_chestplate;1
-        iron_chestplate;4;-1
      >
 
     # Helmets which can be worn by a skeleton in their helmet slot [default: [leather_helmet;3;0], [chainmail_helmet;2], [golden_helmet;1], [iron_helmet;4;-1]]
     S:skeletonEquipmentHelmet <
-        leather_helmet;3;0
-        chainmail_helmet;2
-        golden_helmet;1
-        iron_helmet;4;-1
      >
 
     # Leggings which can be worn by a skeleton in their leggings slot [default: [leather_leggings;3;0], [chainmail_leggings;2], [golden_leggings;1], [iron_leggings;4;-1]]
     S:skeletonEquipmentLeggings <
-        leather_leggings;3;0
-        chainmail_leggings;2
-        golden_leggings;1
-        iron_leggings;4;-1
      >
 
     # Items which can be wielded by a skeleton in their mainhand [default: [bow;1]]
@@ -702,27 +657,11 @@ skeletonequipment {
 
     # Items which can be wielded by a skeleton in their offhand [default: [wooden_axe;3;0], [wooden_sword;3;0], [stone_pickaxe;2], [stone_axe;2], [stone_sword;2], [iron_pickaxe;1], [golden_sword;1], [golden_axe;1], [iron_axe;3;-1], [iron_sword;3;-1]]
     S:skeletonEquipmentOffhand <
-        wooden_axe;3;0
-        wooden_sword;3;0
-        stone_pickaxe;2
-        stone_axe;2
-        stone_sword;2
-        iron_pickaxe;1
-        golden_sword;1
-        golden_axe;1
-        iron_axe;3;-1
-        iron_sword;3;-1
      >
 
     # Enchantments which can be applied to mainhand and offhand items [default: [sharpness;4], [knockback;2], [smite;2], [bane_of_arthropods;2], [looting;1], [sweeping;1], [fire_aspect;5;-1]]
     S:skeletonEquipmentWeaponEnchants <
-        sharpness;4
-        knockback;2
-        smite;2
-        bane_of_arthropods;2
-        looting;1
-        sweeping;1
-        fire_aspect;5;-1
+
      >
 }
 
@@ -1020,6 +959,8 @@ zombie {
         minecraft:zombie_villager
         minecraft:husk
         minecraft:zombie_pigman
+        nethercraft:bloody_zombie
+        nethercraft:dark_zombie
      >
 
     # Set this to true to make all zombies burn in sunlight even if they wear a helmet [default: false]
@@ -1027,14 +968,14 @@ zombie {
 
     # Chance (1 in X) that a zombie spawns riding a zombie horse
     # Set to 0 to disable this feature [range: 0 ~ 32767, default: 10]
-    I:zombieHorseChance=10
+    I:zombieHorseChance=0
 
     # Minimal Y position above zombie horses may spawn [range: 0 ~ 32767, default: 63]
     I:zombieHorseMinY=63
 
     # Chance (1 in X) for a zombie to apply the hunger effect on attack
     # Set to 0 to disable this feature [range: 0 ~ 32767, default: 1]
-    I:zombieHungerChance=1
+    I:zombieHungerChance=4
 
     # Duration in ticks of the applied hunger effect (20 ticks = 1 second) [range: 1 ~ 32767, default: 200]
     I:zombieHungerDuration=200
@@ -1073,19 +1014,19 @@ zombie {
     B:"_zombie pigmanFeaturesEnabled"=true
 
     # The range at which zombie pigmen will be aggressive to the player. [range: 0 ~ 32767, default: 10]
-    I:"zombie pigmanAggressionRange"=10
+    I:"zombie pigmanAggressionRange"=1
 
     # Chance (1 in X) that a zombie pigman gets aggressive if the player breaks nearby blocks [range: 0 ~ 32767, default: 10]
     I:"zombie pigmanAggressiveBlockChance"=10
 
     # Block radius in which zombie pigman get aggressive if the player breaks blocks [range: 1.0 ~ 32767.0, default: 20.0]
-    S:"zombie pigmanAggressiveBlockRange"=20.0
+    S:"zombie pigmanAggressiveBlockRange"=5.0
 
     # Set to false to prevent zombie pigman from getting aggressive if the player touches its hitbox [default: false]
-    B:"zombie pigmanAggressiveTouch"=false
+    B:"zombie pigmanAggressiveTouch"=true
 
     # Set to true for zombie pigmen to always be aggressive [default: true]
-    B:"zombie pigmanAlwaysAggressive"=true
+    B:"zombie pigmanAlwaysAggressive"=false
 
     # Entities which count as zombie pigman entities [default: [minecraft:zombie_pigman]]
     S:"zombie pigmanEntities" <
@@ -1114,58 +1055,36 @@ zombiebossequipment {
 
     # Enchantments which can be applied to armor items [default: [protection;4], [feather_falling;3], [respiration;3], [depth_strider;3], [thorns;2], [projectile_protection;2], [fire_protection;2], [blast_protection;2]]
     S:zombiebossEquipmentArmorEnchants <
-        protection;4
-        feather_falling;3
-        respiration;3
-        depth_strider;3
-        thorns;2
-        projectile_protection;2
-        fire_protection;2
-        blast_protection;2
      >
 
     # Boots which can be worn by a zombie boss in their boots slot [default: [diamond_boots;1]]
     S:zombiebossEquipmentBoots <
-        diamond_boots;1
      >
 
     # Chestplates which can be worn by a zombie boss in their chestplate slot [default: [diamond_chestplate;1]]
     S:zombiebossEquipmentChestplate <
-        diamond_chestplate;1
      >
 
     # Helmets which can be worn by a zombie boss in their helmet slot [default: [diamond_helmet;1]]
     S:zombiebossEquipmentHelmet <
-        diamond_helmet;1
      >
 
     # Leggings which can be worn by a zombie boss in their leggings slot [default: [diamond_leggings;1]]
     S:zombiebossEquipmentLeggings <
-        diamond_leggings;1
      >
 
     # Items which can be wielded by a zombie boss in their mainhand [default: [diamond_sword;3], [diamond_axe;1]]
     S:zombiebossEquipmentMainhand <
-        diamond_sword;3
-        diamond_axe;1
      >
 
     # Items which can be wielded by a zombie boss in their offhand [default: [shield;2], [diamond_sword;1], [diamond_axe;1]]
     S:zombiebossEquipmentOffhand <
-        shield;2
-        diamond_sword;1
-        diamond_axe;1
+
      >
 
     # Enchantments which can be applied to mainhand and offhand items [default: [sharpness;4], [knockback;2], [smite;2], [bane_of_arthropods;2], [looting;1], [sweeping;1], [fire_aspect;5;-1]]
     S:zombiebossEquipmentWeaponEnchants <
-        sharpness;4
-        knockback;2
-        smite;2
-        bane_of_arthropods;2
-        looting;1
-        sweeping;1
-        fire_aspect;5;-1
+
      >
 }
 
@@ -1215,35 +1134,38 @@ zombieequipment {
 
     # Boots which can be worn by a zombie in their boots slot [default: [leather_boots;3;0], [chainmail_boots;2], [golden_boots;1], [iron_boots;4;-1]]
     S:zombieEquipmentBoots <
-        nethercraft:neridium_boots;10
+        nethercraft:neridium_boots;10;-1
      >
 
     # Chestplates which can be worn by a zombie in their chestplate slot [default: [leather_chestplate;3;0], [chainmail_chestplate;2], [golden_chestplate;1], [iron_chestplate;4;-1]]
     S:zombieEquipmentChestplate <
-        nethercraft:neridium_chestplate;10
+        nethercraft:neridium_chestplate;10;-1
      >
 
     # Helmets which can be worn by a zombie in their helmet slot [default: [leather_helmet;3;0], [chainmail_helmet;2], [golden_helmet;1], [iron_helmet;4;-1]]
     S:zombieEquipmentHelmet <
-        nethercraft:neridium_helmet;10
+        nethercraft:neridium_helmet;10;-1
      >
 
     # Leggings which can be worn by a zombie in their leggings slot [default: [leather_leggings;3;0], [chainmail_leggings;2], [golden_leggings;1], [iron_leggings;4;-1]]
     S:zombieEquipmentLeggings <
-       nethercraft:neridium_leggings;10
+       nethercraft:neridium_leggings;10;-1
      >
 
     # Items which can be wielded by a zombie in their mainhand [default: [wooden_axe;3;0], [wooden_sword;3;0], [stone_pickaxe;2], [stone_axe;2], [stone_sword;2], [iron_pickaxe;1], [golden_sword;1], [golden_axe;1], [iron_axe;3;-1], [iron_sword;3;-1]]
     S:zombieEquipmentMainhand <
-      nethercraft:glowood_sword;7
-      nethercraft:neridium_sword;3
-      nethercraft:glowood_pickaxe;5
-      nethercraft:neridium_pickaxe;2
+      nethercraft:glowood_sword;7;-1
+      nethercraft:neridium_sword;3;-1
+      nethercraft:glowood_pickaxe;5;-1
+      nethercraft:neridium_pickaxe;2;-1
      >
 
     # Items which can be wielded by a zombie in their offhand [default: [wooden_axe;3;0], [wooden_sword;3;0], [stone_pickaxe;2], [stone_axe;2], [stone_sword;2], [iron_pickaxe;1], [golden_sword;1], [golden_axe;1], [shield;5], [iron_axe;3;-1], [iron_sword;3;-1]]
     S:zombieEquipmentOffhand <
-       
+      nethercraft:glowood_sword;7;-1
+      nethercraft:neridium_sword;3;-1
+      nethercraft:glowood_pickaxe;5;-1
+      nethercraft:neridium_pickaxe;2;-1
      >
 
     # Enchantments which can be applied to mainhand and offhand items [default: [sharpness;4], [knockback;2], [smite;2], [bane_of_arthropods;2], [looting;1], [sweeping;1], [fire_aspect;5;-1]]
