more nether mob rebalance
Increased pigmen HP
Decreased ghast HP
Decreased magma cube HP
Increased grue follow rage
Decreased magma cube speed

ghasts no longer drop tnt, have reduced explosion radius, and are no longer immune to projectiles

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -17,7 +17,6 @@ attributes {
     # Attributes: [default: [zombie;generic.maxHealth;1;0.5;/;1], [zombie_pigman;generic.maxHealth;1;0.5;/;1], [zombie_villager;generic.maxHealth;1;0.5;/;1], [husk;generic.maxHealth;1;0.5;/;1], [skeleton;generic.maxHealth;1;0.5], [stray;generic.maxHealth;1;0.5], [wither_skeleton;generic.maxHealth;1;1], [slime;generic.maxHealth;1;0.5], [blaze;generic.maxHealth;1;0.5], [magma_cube;generic.maxHealth;1;0.5], [wither;generic.maxHealth;1;1], [vindication_illager;generic.maxHealth;1;0.5], [evocation_illager;generic.maxHealth;1;1], [zombie;generic.followRange;0;30], [zombie_pigman;generic.followRange;0;30], [zombie_villager;generic.followRange;0;30], [husk;generic.followRange;0;30], [skeleton;generic.followRange;0;30], [stray;generic.followRange;0;30], [wither_skeleton;generic.followRange;0;30], [creeper;generic.followRange;0;30], [spider;generic.followRange;0;30], [slime;generic.followRange;0;30], [witch;generic.followRange;0;30], [blaze;generic.followRange;0;30], [ghast;generic.followRange;0;30], [magma_cube;generic.followRange;0;30], [vindication_illager;generic.followRange;0;30], [evocation_illager;generic.followRange;0;30], [zombie;generic.knockbackResistance;0;0.5], [zombie_pigman;generic.knockbackResistance;0;0.5], [zombie_villager;generic.knockbackResistance;0;0.5], [husk;generic.knockbackResistance;0;0.5], [vindication_illager;generic.knockbackResistance;0;0.5], [creeper;generic.movementSpeed;1;0.5], [slime;generic.movementSpeed;1;0.5], [magma_cube;generic.movementSpeed;1;0.5]]
     S:attributesModifier <
         zombie;generic.maxHealth;1;0.5;/;1
-        zombie_pigman;generic.maxHealth;0;-5;/;1
         zombie_villager;generic.maxHealth;1;0.5;/;1
         husk;generic.maxHealth;1;0.5;/;1
         skeleton;generic.maxHealth;1;0.5
@@ -25,7 +24,6 @@ attributes {
         wither_skeleton;generic.maxHealth;0;-5
         slime;generic.maxHealth;1;0.5
         blaze;generic.maxHealth;1;0.5
-        magma_cube;generic.maxHealth;1;0.5
         wither;generic.maxHealth;1;1
         vindication_illager;generic.maxHealth;1;0.5
         evocation_illager;generic.maxHealth;1;1
@@ -52,17 +50,19 @@ attributes {
         vindication_illager;generic.knockbackResistance;0;0.5
         creeper;generic.movementSpeed;1;0.5
         slime;generic.movementSpeed;1;0.5
-        magma_cube;generic.movementSpeed;1;0.5
+        magma_cube;generic.movementSpeed;1;0.01
         nethercraft:dark_zombie;generic.maxHealth;0;-35;/;0
         nethercraft:bloody_zombie;generic.maxHealth;0;-25;/;0
         primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10;/;0
         primitivemobs:flame_spewer;generic.maxHealth;0;-15;/;0
         nethercraft:camouflage_spider;generic.maxHealth;0;-25;/;0
         primitivemobs:festive_creeper;generic.maxHealth;0;-10;/;0
+        magma_cube;generic.maxHealth;0;-5;/;0
+        ghast;generic.maxHealth;0;-5;/;0
         primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
         primitivemobs:blazing_juggernaut;generic.followRange;0;-20
 
-        grue:entitygrue;generic.followRange;0;50
+        grue:entitygrue;generic.followRange;0;60
      >
 }
 
@@ -369,7 +369,7 @@ ghast {
     B:_ghastFeaturesEnabled=true
 
     # Set to false to prevent ghasts from dropping primed TNT on their targets [default: true]
-    B:ghastDropTnt=true
+    B:ghastDropTnt=false
 
     # Entities which count as ghast entities [default: [minecraft:ghast]]
     S:ghastEntities <
@@ -378,10 +378,10 @@ ghast {
 
     # Ghast fireball explosion radius
     # The vanilla default is 1 [range: 0 ~ 32767, default: 3]
-    I:ghastExplosionRadius=3
+    I:ghastExplosionRadius=2
 
     # Set to false to prevent ghasts from being immune to projectiles [default: true]
-    B:ghastProjectileImmunity=true
+    B:ghastProjectileImmunity=false
 }
 
 
@@ -429,7 +429,7 @@ hostilehorse {
      >
 
     # Chance (1 in X) that a random skeleton or zombie starts riding unmounted hostile horses around it [range: 0 ~ 32767, default: 3]
-    I:hostileHorseRandomRiderChance=3
+    I:hostileHorseRandomRiderChance=0
 
     # Range for hostileHorse to search rider [range: 0 ~ 32767, default: 32]
     I:hostileHorseRangeToSearchRider=32
@@ -1014,7 +1014,7 @@ zombie {
     B:"_zombie pigmanFeaturesEnabled"=true
 
     # The range at which zombie pigmen will be aggressive to the player. [range: 0 ~ 32767, default: 10]
-    I:"zombie pigmanAggressionRange"=1
+    I:"zombie pigmanAggressionRange"=2
 
     # Chance (1 in X) that a zombie pigman gets aggressive if the player breaks nearby blocks [range: 0 ~ 32767, default: 10]
     I:"zombie pigmanAggressiveBlockChance"=10
