decrease blaze hp

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -23,7 +23,7 @@ attributes {
         stray;generic.maxHealth;1;0.5
         wither_skeleton;generic.maxHealth;0;-5
         slime;generic.maxHealth;1;0.5
-        blaze;generic.maxHealth;1;0.5
+        blaze;generic.maxHealth;0;-10;/;0
         wither;generic.maxHealth;1;1
         vindication_illager;generic.maxHealth;1;0.5
         evocation_illager;generic.maxHealth;1;1
