--- a/config/mobends.cfg
+++ b/config/mobends.cfg
@@ -14,6 +14,10 @@ animated {
 general {
     S:AppliedPacks <
      >
+    S:itemAttackClassifications <
+     >
+    S:itemUseClassifications <
+     >
     S:keepArmorAsVanilla <
      >
     S:keepEntityAsVanilla <
