--- a/config/simplyhotsprings.cfg
+++ b/config/simplyhotsprings.cfg
@@ -15,22 +15,28 @@ general {
         0
      >
 
+    ##########################################################################################################
+    # worldgen
+    #--------------------------------------------------------------------------------------------------------#
+    # Most of these settings can't be changed while a world is open.
+    ##########################################################################################################
+
     worldgen {
-        # The command "/simplyhotsprings locationinfo" will tell you your current dimension ID as well as the name and types of the biome you're currently in. Use those results to fill in your whitelists and blacklists. It will also tell you whether or not a hot spring can generate there, so you can use it for testing your whitelists and blacklists. (By the way, this config setting does nothing, so put whatever you want in here.)
-        # Full list of biome types: HOT, COLD, SPARSE, DENSE, WET, DRY, SAVANNA, CONIFEROUS, JUNGLE, SPOOKY, DEAD, LUSH, NETHER, END, MUSHROOM, MAGICAL, RARE, OCEAN, RIVER, WATER, MESA, FOREST, PLAINS, MOUNTAIN, HILLS, SWAMP, SANDY, SNOWY, WASTELAND, BEACH, VOID
+        # The command "/simplyhotsprings" has a few subcommands that will help you fill in your whitelists and blacklists and test to see if they work. For example, "/simplyhotsprings locationinfo" will tell you your current dimension ID, the name and types of the biome you're currently in, and whether hot springs can generate there. To see how to use "/simplyhotsprings", run the command "/simplyhotsprings help".
+        # (Also, this config setting does nothing, so put whatever you want in here.)
         S:"#How to fill Whitelists and Blacklists" <
          >
 
-        # The biome names where Hot Springs are NOT allowed to generate. 
+        # The individual biomes where hot springs are NOT allowed to generate.
         S:"Biome Name Blacklist" <
          >
 
-        # The biome names where Hot Springs are allowed to generate. If empty, all biomes are allowed. 
-        # The Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
+        # The individual biomes where hot springs are allowed to generate. If empty, all biomes are allowed. 
+        # The Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. 
         S:"Biome Name Whitelist" <
          >
 
-        # The biome types where Hot Springs are NOT allowed to generate.
+        # The biome types where hot springs are NOT allowed to generate.
         S:"Biome Type Blacklist" <
             DRY
             SAVANNA
@@ -43,24 +49,27 @@ general {
             VOID
          >
 
-        # The biome types where Hot Springs are allowed to generate. If empty, all biome types are allowed. 
-        # The Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied.
+        # The biome types where hot springs are allowed to generate. If empty, all biome types are allowed. 
+        # The Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. 
         S:"Biome Type Whitelist" <
          >
 
-        # The dimension IDs where Hot Springs are NOT allowed to generate.
+        # The dimension IDs where hot springs are NOT allowed to generate.
         I:"Dimension Blacklist" <
          >
 
-        # The dimension IDs where Hot Springs are allowed to generate. If empty, all dimensions are allowed.
+        # The dimension IDs where hot springs are allowed to generate. If empty, all dimensions are allowed.
         I:"Dimension Whitelist" <
             0
          >
 
-        # If the world type is Biomes O' Plenty, these hot springs won't generate. Set this to true to make them generate anyway.
-        B:"Generate in Biomes O' Plenty World Type"=false
+        # If a world has Biomes O' Plenty hot springs enabled, the hot springs from this mod won't generate. Set this to true to make them generate anyway.
+        B:"Generate Alongside Biomes O' Plenty Hot Springs"=false
 
-        # The chance for a Hot Spring to generate. Lower values are more likely.
+        # If the world type is Superflat, the hot springs from this mod won't generate. Set this to true to make them generate anyway.
+        B:"Generate in Superflat World Type"=false
+
+        # The chance for a hot spring to generate is 1 over this value. So lower values are more likely.
         # Min: 1
         # Max: 2147483647
         I:"Generation Chance"=275
