Remove sailor, air charms

--- a/config/cyclicmagic.cfg
+++ b/config/cyclicmagic.cfg
@@ -641,7 +641,7 @@ cyclicmagic {
         B:AerialFaithPlate=true
 
         # charm_air Set false to delete - requires restart [default: true]
-        B:AirCharm=true
+        B:AirCharm=false
 
         #  Set false to delete - requires restart [default: true]
         B:AntidoteCharm=true
@@ -974,7 +974,7 @@ cyclicmagic {
         B:RodElevation=false
 
         # charm_boat Set false to delete - requires restart [default: true]
-        B:SailorCharm=true
+        B:SailorCharm=false
 
         # Sandstone tools are between wood and stone.  Set false to delete - requires restart [default: true]
         B:SandstoneTools=true
