--- a/config/cyclicmagic.cfg
+++ b/config/cyclicmagic.cfg
@@ -1004,7 +1004,7 @@ cyclicmagic {
         B:SpawnDetector=false
 
         #  Set false to delete - requires restart [default: true]
-        B:SpeedCharm=true
+        B:SpeedCharm=false
 
         #  Set false to delete - requires restart [default: true]
         B:Spikes=true
