--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -80,6 +80,8 @@
 changer {
     #  [default: ]
     S:changer <
+        DURABILITY;cyclicmagic:charm_speed;10
+        
         ATTACK_SPEED;nethercraft:glowood_axe;0.4
         ATTACK_SPEED;nethercraft:netherrack_axe;0.4
         ATTACK_SPEED;nethercraft:neridium_axe;0.4
