--- a/font_selection/october_crow/smoothfont.cfg
+++ b/font_selection/october_crow/smoothfont.cfg
@@ -30,7 +30,7 @@ common {
     B:enableAlphaBlend=true
 
     # Enable anisotropic filtering.
-    B:enableAnisotropicFilter=true
+    B:enableAnisotropicFilter=false
 
     # Enable double rendering
     B:enableDouble=false
@@ -69,7 +69,7 @@ common {
     I:overlayLodBias=-5
 
     # Prioritize performance rather than quality.
-    B:performanceMode=false
+    B:performanceMode=true
 
     # Enable odd multiple GUI scale factors (x3,x5,...) when using unicode font.
     B:removeScaleRestriction=true
