--- a/config/aquaacrobatics.cfg
+++ b/config/aquaacrobatics.cfg
@@ -23,6 +23,9 @@ general {
         # Enables crawling to prevent suffocation. Note that if you disable this there will probably be behavioral differences from 1.13.
         B:"Enable Crawling"=true
 
+        # Enables a keybind to toggle crawling.
+        B:"Enable Toggle Crawling"=false
+
         # Prevent sprinting from being triggered by double tapping the walk forward key.
         B:"No Double Tab Sprinting"=false
 
@@ -91,6 +94,9 @@ general {
         B:"Random Patches Integration"=true
 
         # Only applies when the mod is installed. Disable when there are issues with the mod.
+        B:"Thaumic Augmentation Integration"=true
+
+        # Only applies when the mod is installed. Disable when there are issues with the mod.
         B:"Trinkets and Baubles Integration"=true
 
         # Only applies when the mod is installed. Disable when there are issues with the mod.
@@ -106,6 +112,12 @@ general {
     blocks {
         # Make water only reduce light level by 1 per Y-level, instead of 3.
         B:"Brighter Water"=true
+
+        # Use the new water rendering in 1.13+.
+        B:"New Water"=true
+
+        # Use the new fog rendering in 1.13+.
+        B:"New Water Fog"=true
 
         # Allow seagrass to generate in the world.
         B:Seagrass=false
