Rip and tear until it is done (added mob dismemberment)
Added MoreTweaker for JEI and erebus tweaking
Changed mana hud overlay

--- a/config/enderskills/client.cfg
+++ b/config/enderskills/client.cfg
@@ -42,7 +42,7 @@ general {
             # NOTCHED_10
             # NOTCHED_12
             # NOTCHED_20
-            S:overlay=NOTCHED_20
+            S:overlay=PROGRESS
             I:posX=5
             I:posY=5
             B:renderOverlay=true
