--- a/config/SRParasites.cfg
+++ b/config/SRParasites.cfg
@@ -2264,7 +2264,7 @@ parasite_evolution_phases_2 {
     I:"Phase 2 Sleep Penalty"=50
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Two]
-    S:"Phase 2 Warning Message"=§4You have come so far to die.
+    S:"Phase 2 Warning Message"=§4You have come so far just to die.
 }
 
 
@@ -2432,7 +2432,7 @@ parasite_evolution_phases_6 {
     I:"Phase 6 Sleep Penalty"=5000000
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Six]
-    S:"Phase 6 Warning Message"=§4There is no escape. Kill yourself, now.
+    S:"Phase 6 Warning Message"=§4Might I remind you... there is no escape. Kill yourself, now.
 }
 
 
@@ -2474,7 +2474,7 @@ parasite_evolution_phases_7 {
     I:"Phase 7 Sleep Penalty"=30000000
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Seven]
-    S:"Phase 7 Warning Message"=§4THIS IS YOUR LAST WARNING. GO BACK.
+    S:"Phase 7 Warning Message"=§4My creations only grow stronger the longer you are here. You have no hope.
 }
 
 
@@ -2516,7 +2516,7 @@ parasite_evolution_phases_8 {
     I:"Phase 8 Sleep Penalty"=1
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Eight]
-    S:"Phase 8 Warning Message"=§4So be it. Enjoy my creations.
+    S:"Phase 8 Warning Message"=§4Time is running out. Your destruction will be swift and painful.
 }
 
 
