--- a/config/time_is_up.cfg
+++ b/config/time_is_up.cfg
@@ -8,7 +8,7 @@ boss {
     S:Boss={id:"minecraft:ender_dragon"}
 
     # Message sent when the player killed the boss. [default: §6You are now free to travel across dimensions without any limit.]
-    S:"Boss message"=§6You are now free to travel across dimensions without any limit.
+    S:"Boss message"=§5Finally. Peace. Thank you.
 }
 
 
