Remove mana costs entirely
annoying to keep track of, especially since there are no QoL mechanics or even indicators to see how much mana an ability costs

--- a/config/enderskills/client.cfg
+++ b/config/enderskills/client.cfg
@@ -45,7 +45,7 @@ general {
             S:overlay=PROGRESS
             I:posX=5
             I:posY=5
-            B:renderOverlay=true
+            B:renderOverlay=false
             D:scale=1.0
             I:size=182
         }
