--- a/config/MusicTriggers/debugoptions.cfg
+++ b/config/MusicTriggers/debugoptions.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Show the debug info
-    B:ShowDebugInfo=true
+    B:ShowDebugInfo=false
 
     # Show an overlay for the name of the current GUI
     B:ShowGUIName=false
