update haste url

--- a/config/vanillafix.cfg
+++ b/config/vanillafix.cfg
@@ -3,7 +3,7 @@
 crashes {
     B:disableReturnToMainMenu=false
     I:errorNotificationDuration=20000
-    S:hasteURL=https://paste.dimdev.org
+    S:hasteURL=https://www.toptal.com/developers/hastebin/
     B:replaceErrorNotifications=false
 
     # Valid values:
