buff nether XP drops, buff fire charm durability

--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -81,6 +81,7 @@ changer {
     #  [default: ]
     S:changer <
         DURABILITY;cyclicmagic:charm_speed;10
+        DURABILITY;cyclicmagic:charm_fire;20
         
         ATTACK_SPEED;nethercraft:glowood_axe;0.4
         ATTACK_SPEED;nethercraft:netherrack_axe;0.4
