Recipes/loot changes, tooltips, renamed stuff
- Renamed Slime Eggs to Magma Eggs, as well as Scrambled Magma Eggs

- Magma cubes no longer drop magma cream
- Blazes now drop 2-3 fire charges

- Magma cream can now be crafted from blaze powder and magma eggs
- Fire charge recipe changed to only require blaze powder and gunpowder
- TNT can now be converted back to gunpowder

- Added a tooltip to firecharges that it can be thrown

- Hid some unneeded recipes

--- a/config/wildlyeat.cfg
+++ b/config/wildlyeat.cfg
@@ -164,7 +164,7 @@ general {
     I:SpitCountMax=10
     D:Spitexpendmultiple=1.0
     S:WhiteList <
-        contenttweaker:scrambled_slime_eggs
+        contenttweaker:scrambled_magma_eggs
         contenttweaker:deviled_egg_sandwich
         nethercraft:glow_apple
         nethercraft:glow_stew
@@ -176,14 +176,14 @@ general {
     I:consumecountmultiple=1
     I:eatencooldown=500
     S:eateneffectlist <
-        contenttweaker:scrambled_slime_eggs,minecraft:fire_resistance,200,0,1
+        contenttweaker:scrambled_magma_eggs,minecraft:fire_resistance,200,0,1
         contenttweaker:deviled_egg_sandwich,minecraft:fire_resistance,600,0,1
         contenttweaker:deviled_egg_sandwich,minecraft:strength,600,0,1
         nethercraft:glow_apple,minecraft:glowing,40,0,1
         nethercraft:glow_stew,minecraft:glowing,80,0,1
      >
     S:eatensetlist <
-        contenttweaker:scrambled_slime_eggs,10,1,1
+        contenttweaker:scrambled_magma_eggs,10,1,1
         contenttweaker:deviled_egg_sandwich,3,0,1
         nethercraft:glow_apple:12,3,0,0
         nethercraft:glow_stew,10,0,1
