New music system, couple other changes
- updated musictrigger to new music system, includes some tweaks to the music. The Deep Dark now includes periods of silence
- increased eyes in darkness spawns
- swapped eyes jumpscare sound (heh)
- disabled invisible creepers
- adjusted HUD
- changed button click sound (subject to change)
- removed music triggers reload keybinding

--- a/config/beneath/beneath.cfg
+++ b/config/beneath/beneath.cfg
@@ -72,7 +72,7 @@ general {
     S:Mode=none
 
     # Toggles whether or not other mods should be able to interfere with the terrain generation of The Beneath.
-    B:"Other Mod World Generation"=true
+    B:"Other Mod World Generation"=false
 
     # Changes the red part of the Beneath sky color while affected by Night Vision. Client side only.
     # [range: 0.0 ~ 10.0, default: 1.1]
@@ -92,7 +92,7 @@ general {
     I:"Stalagmite spawn chance"=20
 
     # Whether or not torches should spawn on the platform generated when entering The Beneath.
-    B:"Teleporter Torches"=true
+    B:"Teleporter Torches"=false
 
     # This determines which block the terrain of The Beneath should be made out of. If you want it to be something other than stone, you can change this instead of jerry-rigging the block decorator to replace all stone.
     # Format is "modid:name:meta", where meta is optional
