--- a/config/eyesinthedarkness.cfg
+++ b/config/eyesinthedarkness.cfg
@@ -7,11 +7,10 @@ general {
 
     # If not empty, this list of biomes will be used instead of all biomes. The blacklist will not take effect.
     S:BiomeWhitelist <
-        beneath:the_beneath
      >
 
     # If false, the eyes entity will not spawn naturally during the night-
-    B:EnableNaturalSpawn=true
+    B:EnableNaturalSpawn=false
 
     # While set to true, the eyes entity will ignore the artificial light level and will jumpscare even if it's lit. Daylight will still disable it's AI.
     B:EyesCanAttackWhileLit=true
@@ -22,7 +21,7 @@ general {
     # Set to a number > 0 to cause the jumpscare to apply poison the player. A value of 5 will take around half of the health. 
     # Min: 0
     # Max: 6
-    I:JumpscareHurtLevel=1
+    I:JumpscareHurtLevel=3
 
     # Min: 1
     # Max: 2147483647
