update a bunch of mods

--- a/config/globalgamerules.cfg
+++ b/config/globalgamerules.cfg
@@ -40,11 +40,17 @@ gamerules {
     # Whether blocks should have drops
     B:doTileDrops=true
 
+    # GameRule added by another mod or from commands
+    S:doVanillaAttack=true
+
     # Whether the weather will change
     B:doWeatherCycle=false
 
     # The function to run every game tick
     S:gameLoopFunction=-
+
+    # GameRule added by another mod or from commands
+    S:hasFallAnimation=true
 
     # Whether the player should keep items in their inventory after death
     B:keepInventory=false
@@ -89,6 +95,9 @@ gamerules {
 
     # Whether players in spectator mode can generate chunks
     B:spectatorsGenerateChunks=true
+
+    # GameRule added by another mod or from commands
+    S:speedPenaltyPercent=100
 }
 
 
