--- a/config/mowziesmobs.cfg
+++ b/config/mowziesmobs.cfg
@@ -38,13 +38,13 @@ mobs {
             # Set to 1 to allow all generation attempts to succeed.
             # Min: 0.0
             # Max: 1.0
-            D:generation_chance=0.800000011920929
+            D:generation_chance=0.0
 
             # Smaller number causes more generation, 0 to disable spawning
             # Maximum number of chunks between placements of this mob/structure
             # Min: 1
             # Max: 1000
-            I:generation_frequency=12
+            I:generation_frequency=0
 
             # Maximum height for generation placement. -1 to ignore
             # Min: -1.0
@@ -129,7 +129,7 @@ mobs {
             # Maximum number of chunks between placements of this mob/structure
             # Min: 1
             # Max: 1000
-            I:generation_frequency=12
+            I:generation_frequency=0
 
             # Maximum height for generation placement. -1 to ignore
             # Min: -1.0
@@ -199,7 +199,7 @@ mobs {
         generation_data {
             # IDs of dimensions this mob/structure can generate in
             I:dimensions <
-                0
+                10
              >
 
             # Probability that generation succeeds.
@@ -321,7 +321,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=2
+            I:spawn_rate=0
 
             ##########################################################################################################
             # biome_data
@@ -370,16 +370,12 @@ mobs {
         spawn_data {
             # Names of blocks this mob is allowed to spawn on. Leave blank to allow any block.
             S:allowed_blocks <
-                grass
-                leaves
-                leaves2
-                log
-                log2
+                
              >
 
             # IDs of dimensions this mob can spawn in
             I:dimensions <
-                0
+                10
              >
 
             # Maximum height for this spawn. -1 to ignore.
@@ -390,7 +386,7 @@ mobs {
             # Minimum height for this spawn. -1 to ignore.
             # Min: -1.0
             # Max: 255.0
-            D:height_min=60.0
+            D:height_min=-1
 
             # Maximum number of mobs that appear in a spawn group
             # Min: 1
@@ -414,7 +410,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=5
+            I:spawn_rate=0
 
             ##########################################################################################################
             # biome_data
@@ -434,13 +430,11 @@ mobs {
                 # For example, 'FOREST,MAGICAL,!SNOWY' would mean all biomes that are magical forests but not snowy
                 # '!MOUNTAIN' would mean all non-mountain biomes
                 S:biome_type <
-                    FOREST,MAGICAL,!SNOWY
                  >
 
                 # Allow spawns in these biomes regardless of the biome type settings
                 S:biome_whitelist <
-                    roofed_forest
-                    mutated_roofed_forest
+                    
                  >
             }
 
@@ -462,9 +456,6 @@ mobs {
         spawn_data {
             # Names of blocks this mob is allowed to spawn on. Leave blank to allow any block.
             S:allowed_blocks <
-                grass
-                stone
-                sand
              >
 
             # IDs of dimensions this mob can spawn in
@@ -504,7 +495,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=4
+            I:spawn_rate=0
 
             ##########################################################################################################
             # biome_data
@@ -601,7 +592,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=3
+            I:spawn_rate=0
 
             ##########################################################################################################
             # biome_data
@@ -658,16 +649,12 @@ mobs {
         spawn_data {
             # Names of blocks this mob is allowed to spawn on. Leave blank to allow any block.
             S:allowed_blocks <
-                grass
-                leaves
-                leaves2
-                log
-                log2
+                
              >
 
             # IDs of dimensions this mob can spawn in
             I:dimensions <
-                0
+                5
              >
 
             # Maximum height for this spawn. -1 to ignore.
@@ -702,7 +689,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=20
+            I:spawn_rate=0
 
             ##########################################################################################################
             # biome_data
