New way to get soul compass (all ways listed in desc)
First way:
- Find Soul Compass in Nether Fortress (heavy RNG)

Second way:
- Craft Soul Compass with soul powder + neridium
- soul powder crafted from soul sand (some rng) + soul bead (some rng)
- Soul bead dropped commonly by wither skeletons, rarely by dark zombies

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -67,6 +67,8 @@ definitions {
         quark:soul_powder
         cyclicmagic:charm_antidote
         quark:black_ash
+        quark:soul_compass
+        quark:soul_bead
      >
 
     #  [default: ]
