--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ servers.dat
 /resourcepacks/Green Screen Custom Sky UNIVERSAL/
 mods/Green Screens 2.0.jar
 shaderpacks/Chocapic13_V9.1_Extreme_beta_5.zip
+fancymenu_data/last_world.fmdata
