--- a/config/KeepEquipment.cfg
+++ b/config/KeepEquipment.cfg
@@ -14,6 +14,7 @@ general {
     S:keepCustom <
         enderskills:book
         quark:soul_compass
+        reroll:dice
      >
 
     # Set to false to make tools drop on death. [default: true]
