--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1577,7 +1577,7 @@ tweaks {
         B:"Force Enabled"=false
 
         # Which crops can be harvested?
-        # Format is: "harvestState[,afterHarvest]", i.e. "minecraft:wheat:7" or "minecraft:cocoa:11,minecraft:cocoa:3"
+        # Format is: "harvestState[,afterHarvest]", e.g. "minecraft:wheat:7" or "minecraft:cocoa:11,minecraft:cocoa:3"
         S:"Harvestable Crops" <
             minecraft:wheat:7
             minecraft:carrots:7
@@ -1595,6 +1595,14 @@ tweaks {
 
         # Can hoes harvest crops with right click?
         B:"Hoe Harvest"=true
+
+        # Should Quark require crops to have seeds to harvest the crops?
+        B:"Require Crop Seeds"=false
+
+        # Which crops can *not* be harvested?
+        # Format is: "harvestState", e.g. "minecraft:wheat:7" or "minecraft:cocoa:11"; omit the meta for a wildcard blacklist
+        S:"Unharvestable Crops" <
+         >
     }
 
     "jump boost allows to step up 1 block" {
@@ -3009,7 +3017,7 @@ world {
 
     "nether obsidian spikes" {
         # The chance for a spike to be big (1 is 100%, 0 is 0%)
-        D:"Big Spike Chance"=0.1
+        D:"Big Spike Chance"=0.05
         B:"Big Spikes Have Spawners"=true
 
         # The chance for a chunk to contain spikes (1 is 100%, 0 is 0%)
