--- a/config/renderlib.cfg
+++ b/config/renderlib.cfg
@@ -1,6 +1,14 @@
 # Configuration file
 
 general {
+    # Allows you to increase the render bounding boxes of entities (or all entities of a mod). Width increases the size on the X and Z axis. Top increases the size in the positive Y direction. Bottom increases the size in the negative Y direction. (Accepts 'modid=width,top,bottom' or 'modid:entity=width,top,bottom').
+    S:entityBoundingBoxGrowthList <
+     >
+
+    # Allows you to increase the render bounding boxes of tile entities (or all entities of a mod). Width increases the size on the X and Z axis. Top increases the size in the positive Y direction. Bottom increases the size in the negative Y direction. (Accepts 'modid=width,top,bottom' or 'modid:tileentity=width,top,bottom').
+    S:tileEntityBoundingBoxGrowthList <
+     >
+
     # Tile entities whose bounding boxes won't be cached (Accepts 'modid' or 'modid:tileentity').
     S:tileEntityCachedBoundingBoxBlacklist <
      >
