--- a/config/MusicTriggers/musictriggers.toml
+++ b/config/MusicTriggers/musictriggers.toml
@@ -161,6 +161,8 @@
 		name = "dimension"
 		priority = "1"
 		delay = "200"
+		fade_in = "80"
+		volume = "0.5"
 		resource_name = "0"
 		identifier = "overworld"
 
