--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1236,6 +1236,7 @@ oddities {
         # Items that should be prevented from being saved by the totem
         # Format is modid:item[:meta]
         S:"Holding Blacklist" <
+            quark:soul_compass
          >
 
         # An item that must be in the player inventory for the totem to work. Set to 'none' to disable
@@ -1244,7 +1245,7 @@ oddities {
         B:"Spawn Totem on PVP Kill"=true
 
         # Displayed scale of the totem of holding entity
-        D:"Totem of Holding Entity Scale"=1.0
+        D:"Totem of Holding Entity Scale"=2.0
     }
 
     "matrix enchanting" {
