Removed realistic torches mod, other tweaks
mod doesn't feel like it fits in trepidation, at least right now. might consider when future dimensions are done but like, players never stay in the same place long enough anyway and the new items are a hassle

in general making "lit torches" is really tedious

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -68,6 +68,9 @@ definitions {
         cyclicmagic:charm_antidote
         quark:black_ash
         quark:soul_compass
+        minecraft:blaze_powder
+        minecraft:magma_cream
+        minecraft:fire_charge
      >
 
     #  [default: ]
