mod update stuff

--- a/config/mobdismemberment.cfg
+++ b/config/mobdismemberment.cfg
@@ -7,22 +7,22 @@
 ##########################################################################################################
 
 clientonly {
-    # Should gibbing have blood? [range: 0 ~ 1, default: 1]
+    # Should gibbing have blood?
     I:blood=1
 
-    # Amount of blood particles spawned per gib [range: 1 ~ 1000, default: 100]
+    # Amount of blood particles spawned per gib
     I:bloodCount=200
 
-    # Length of time gibs can once they hit the ground [range: 0 ~ 2147483647, default: 100]
+    # Length of time gibs can once they hit the ground
     I:gibGroundTime=100
 
-    # Do gibs actively push mobs in it's path? [range: 0 ~ 1, default: 1]
+    # Do gibs actively push mobs in it's path?
     I:gibPushing=1
 
-    # Length of time gibs can live (entirely) [range: 0 ~ 2147483647, default: 1000]
+    # Length of time gibs can live (entirely)
     I:gibTime=1000
 
-    # Should blood be green instead of red? [range: 0 ~ 1, default: 0]
+    # Should blood be green instead of red?
     I:greenBlood=0
 }
 
