New features for speedrunners!
- Escaping the nether now outputs your time left and elapsed time in chat

- Escaping the nether now outputs how many timer bonuses you used (NOTE THIS IS BUGGED AND IS SHOWING DOUBLE THE AMOUNT)

--- a/config/time_is_up.cfg
+++ b/config/time_is_up.cfg
@@ -47,6 +47,9 @@ configs {
     # Set to true to use the same shared timer for all dimensions [default: false]
     B:"Global timer"=true
 
+    # Set to true to set the world to hardcore mode once time is up. [default: false]
+    B:"Hardcore timer"=false
+
     # When time is up, the player die if set to false or receive bad potion effects if set to true [default: false]
     B:"Potion Effects"=true
 
