Nether tweaks, new nether items and uses
- Ghast bones now drop much more commonly from bone blocks
- Bandages and Medkits can now be crafted with Nether materials
- Neridium Lighter can now be crafted and has a new texture
- Added some.... helpful tooltips for some items

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -55,6 +55,7 @@ definitions {
     S:level0_entries <
         enderskills:token
         enderskills:book
+        %Heart Container
      >
 
     #  [default: ]
@@ -71,6 +72,8 @@ definitions {
         minecraft:blaze_powder
         minecraft:magma_cream
         minecraft:fire_charge
+        %Bandages
+        %Medkit
      >
 
     #  [default: ]
