--- a/config/aquaacrobatics.cfg
+++ b/config/aquaacrobatics.cfg
@@ -59,6 +59,9 @@ general {
         # Animate eating in third-person view.
         B:"Eating Animation"=true
 
+        # Whether or not items should float in water like in 1.13+.
+        B:"Floating Items"=true
+
         # Replenish air slowly when out of water instead of immediately.
         B:"Replenish Air Slowly"=true
 
@@ -78,6 +81,9 @@ general {
     ##########################################################################################################
 
     integration {
+        # Only applies when the mod is installed. Disable when there are issues with the mod.
+        B:"Applied Energistics 2 Integration"=true
+
         # Only applies when the mod is installed. Disable when there are issues with the mod.
         B:"ArtemisLib Integration"=true
 
