--- a/config/simplyhotsprings.cfg
+++ b/config/simplyhotsprings.cfg
@@ -1,6 +1,10 @@
 # Configuration file
 
 general {
+    # Client-side option. If true, Hot Spring Water makes smaller, less obtrusive steam particles instead. 
+    # Note: these particles are affected by your particle video setting, and won't appear at all if it's set to Minimal.
+    B:"Alternate Particles"=false
+
     # If true, Hot Spring Water makes infinite water sources, like vanilla water does.
     B:"Creates Source Blocks"=true
 
@@ -66,7 +70,7 @@ general {
         # If a world has Biomes O' Plenty hot springs enabled, the hot springs from this mod won't generate. Set this to true to make them generate anyway.
         B:"Generate Alongside Biomes O' Plenty Hot Springs"=false
 
-        # If the world type is Superflat, the hot springs from this mod won't generate. Set this to true to make them generate anyway.
+        # If the world type is Superflat, the hot springs from this mod won't generate in the overworld. Set this to true to make them generate anyway.
         B:"Generate in Superflat World Type"=false
 
         # The chance for a hot spring to generate is 1 over this value. So lower values are more likely.
