player spawns on heat sand

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -26,7 +26,7 @@ reroll {
 
     # Sets the resource location for the block you can spawn on. [default: [minecraft:grass], [minecraft:dirt], [minecraft:stone]]
     S:"Block Spawn" <
-        nethercraft:nether_dirt
+        nethercraft:heat_sand
      >
 
     # Should players get an initial inventory when they first join a world? [default: true]
