Decrease initial world load times

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -39,7 +39,7 @@ reroll {
     B:"Lock Reroll"=true
 
     # Maximum number of times to try to find a valid block position for reroll. Rerolling again will reset the count and start from the next reroll position. [range: 1 ~ 10, default: 5]
-    I:"Max Tries"=10
+    I:"Max Tries"=3
 
     # Override the dimension used for the reroll spawn location [range: -2147483648 ~ 2147483647, default: 0]
     I:"Override Dimension"=-1
@@ -54,7 +54,7 @@ reroll {
     I:"Reroll Cooldown"=60
 
     # Horizontal radius to search for a reroll position. Larger numbers might cause more lag. [range: 16 ~ 2048, default: 256]
-    I:"Reroll Horizontal Radius"=256
+    I:"Reroll Horizontal Radius"=112
 
     # A list of items that will be added to a player's inventory after using the reroll command.
     # You can add any existing item per line like this: "minecraft:torch;16".
@@ -79,10 +79,10 @@ reroll {
     B:"Send to Chest"=false
 
     # Should reroll spawn location be set in the player's current dimension? If false, defaults to player spawn dimension. [default: false]
-    B:"Use Current Dimension"=true
+    B:"Use Current Dimension"=false
 
     # Should reroll spawn location be set to the override dimension? If false, defaults to player spawn dimension. [default: false]
-    B:"Use Override Dimension"=false
+    B:"Use Override Dimension"=true
 }
 
 
