add two nether items to legendary tooltips

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -84,6 +84,8 @@ definitions {
         minecraft:fire_charge
         %Bandages
         %Medkit
+        contenttweaker:scrambled_magma_eggs
+        contenttweaker:deviled_egg_sandwich
      >
 
     #  [default: ]
