--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ mods/Green Screens 2.0.jar
 shaderpacks/Chocapic13_V9.1_Extreme_beta_5.zip
 fancymenu_data/last_world.fmdata
 mputils/settings.dat
+scripts/.zsrc
