--- a/config/BiomeTweaker/scripts/oceans.cfg
+++ b/config/BiomeTweaker/scripts/oceans.cfg
@@ -8,4 +8,4 @@ biomeFrozenOcean = forBiomes("minecraft:frozen_ocean")
 biomeFrozenOcean.registerGenBiomeRep("minecraft:forest")
 
 biomeBeach = forBiomes("minecraft:beach")
-biomeFrozenOcean.registerGenBiomeRep("minecraft:forest")
+biomeBeach.registerGenBiomeRep("minecraft:forest")
