--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -100,12 +100,15 @@ definitions {
     S:level3_entries <
         %Gamma
         %Deep Stone
+        %Diamond
+        %Coal
      >
 
     #  [default: ]
     S:level4_entries <
         %Delta
         @srparasites
+        minecraft:stone
      >
 
     #  [default: ]
