--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ shaderpacks/Chocapic13_V9.1_Extreme_beta_5.zip
 fancymenu_data/last_world.fmdata
 mputils/settings.dat
 scripts/.zsrc
+config/splash.properties
+config/customloadingscreen_timings.nbt
+config/cd4017be/compiled.dat
+config/InvTweaks.cfg
